Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122677

magic8ball doesn't receive errorOccurred() if server is not started

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 RC, 6.8.0 FF
    • 6.7
    • GRPC
    • None
    • 7311a5e5b (dev), ba4864683 (6.7)

    Description

      I think we have a small regression.

      After https://codereview.qt-project.org/c/qt/qtgrpc/+/514538 magic8ball works differently.

       

      1. BEFORE change
        Start magic8ball client (Do NOT start server part)
        Press button "Ask question"
        Client receives errorOccurred() signal
        Application shows a message "Please, start server"

      2. NOW:
      Start magic8ball client (Do NOT start server part)
      Press button "Ask question"
      Nothing happens

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semlanik Alexey Edelev
            tatiana.borisova Tatiana Borisova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes